<resources>
    <string name="app_name">Weather</string>
    <string name="weatheractivity">Жизненный цикл WeatherActivity!</string>
    <string name="country">Country</string>
    <string name="cretae_action">Create action</string>
    <string name="fullname">Fullname</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">DONE</string>
    <string name="feels_like">Feels like</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="visibility">Visibility</string>
    <string name="precipitation">Precipitation</string>
    <string name="temperature">temperature</string>
    <string name="other">Other City</string>
    <string name="notifications">Notifications</string>
    <string name="autoUpdates">Auto Updates</string>
    <string name="simpleView">Simple View</string>
    <string name="popularView">Popular View</string>
    <string name="customView">Custom View</string>
    <string name="action_add">Add</string>
    <string name="submitReport">Submit Error</string>
    <string name="close_nav">Close Navigationn</string>
    <string name="error_no_sensor">No sensor</string>
    <string name="gps">Use GPS</string>
    <string name="web_gismeteo">Gismeteo</string>
    <string name="menu_add">Add</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="title_add">Add title</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="description">Descripton</string>
    <string name="time">HH:mm</string>
    <string name="date">dd.mm.yyyy</string>
    <string name="menu_weather">Show weather</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="ok">ok</string>
    <string name="action_share">Share</string>
    <string name="channel_name">sms_channel</string>
    <string name="channel_description">receive sms for registration</string>
    <string name="phone_hint">--- --- ----</string>
    <string name="code">Code</string>
    <string name="incorrect_code">Code is incorrect. Send code again.</string>
    <string name="incorrect_phone">Phone number is incorrect.</string>
</resources>
