<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <group
        android:checkableBehavior="all">
        <item
            android:id="@+id/action_notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/auto_updates"
            android:title="@string/autoUpdates" />
    </group>
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/simple_view"
            android:title="@string/simpleView" />
        <item
            android:id="@+id/popular_view"
            android:title="@string/popularView" />
        <item
            android:id="@+id/custom_view"
            android:title="@string/customView" />
    </group>

</menu>
