<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:orderInCategory="10"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_info"
            android:orderInCategory="90"
            android:icon="@drawable/ic_info_outline_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/sub_report"
            android:orderInCategory="0"
            android:icon="@drawable/ic_input_black_24dp"
            android:title="@string/submitReport"
            app:showAsAction="always"
            />
    </group>

</menu>
